searchUser implemented through getUserProfile
